src/custom.scss
/* ... */
// Headphones

.headphone-spacer {
  height: 425px;

  @include lg{
    display: none;
  }
  
}

.headphones-container {

  position: relative;

  @include lg {
    display: none;
  }

  .headphones-image {
    position: absolute;
    left: 50%;
    transform: translateX(-63%)
  }
}

// About me

.about-me-container, .desktop-about-me-container {


  @include lg {
    display: none;
  }
  .about-me-text {
    line-height: 200%;
    
    @include lg {
      width: 70%;
      font-weight: 400;
    }
  }
}

// View Work

.view-work-container {

  margin-top: 1.5rem;

  margin-bottom: 4rem;

  @include lg {
    display: none;
  }

  .view-work-button {
    background-color: transparent;
    border: none;
    padding: 0;
    font-size: 1.4rem;
    letter-spacing: .3rem;
    position: relative;

    .line-through-work {
      height: 8px;
      // width: 80%;
      left: 0;
      right: 5%;
      background-color: rgba(7,111,56, 0.8);
      position: absolute;
      bottom: 10%;
    }
  }


}

.featured-projects-container {
  margin-top: 6rem;

  @include lg {
    display: none
  }
}

.desktop-featured-projects-container {
  display: none;
  @include lg {
    display: block;
  }
}

.featured-projects-text {
  position: relative;
  font-weight: bold;
  font-size: 1.5rem;


  @include lg {
    font-size: 4rem;
    font-weight: bold;
  }
    .underline-full-width {

      height: 1px;
      background-color: #fff;
      position: absolute;
      left: -20%;
      right: -20%;
      bottom: 20%;

      @include lg {
        left: -40%;
        right: -40%;
      }
    }
}



.concert-builder-container, .orchesnation-container, .mars-rover-container {

  @include lg {
    margin-top: 4rem;
    margin-bottom: 4rem;
  }

  h4 {
    font-weight: bold;
    margin-top: 3rem;
    margin-bottom: 1rem;
  }

  p {
    font-size: 1.2rem;
    line-height: 2rem;
    margin-bottom: 2rem;
    // width: 80%;
  }

  p:first-of-type {
    // width: 80%;
  }
}

.desktop-project-divider {
  margin-left: -500px;
  margin-right: -500px;
}

.mobile-project-divider {
  margin-left: -40px;
  margin-right: -40px;
}

.view-projects-selector {
  margin-bottom: 4rem;
  height: 4rem;
  
  .view-project {
    font-size: 1.4rem;
    width: 50%;
  }
}

.view-project-button {

  margin-top: 2rem;

  .view-project {
    margin-bottom: 0;
  }
}

.projects-tags-container{
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.project-tag {
  height: 2rem;
  border-radius: 25px;
  background-color: #FFFFFF19;
  color: $white;
  display: block;
  font-family: pt-mono ,monospace;
  font-weight: 700;
  font-style: normal;
  font-size: .9rem;
  letter-spacing: .3rem;
  margin-bottom: 0;
  outline: none;
  border: none;
  margin-top: 1rem;
  transition: none !important;
  cursor: default !important;

  @include lg {
    margin: auto 1rem;
  }
}

.project-tag:hover {
  background-color: #FFFFFF19 !important;
  text-decoration: none;
}

.project-tag-hooks, .project-tag-rest {
  font-size: .6rem;
  padding-left: .5rem;
  padding-right: .5rem;
  letter-spacing: .2rem;
}

.project-tag:first-of-type {
  margin-left: 0;
}

.project-tag:active {
  color: $white;
  background-color: #FFFFFF19 !important;
  border-color: none !important;
  outline: none !important;
  box-shadow: none !important
}

.project-tag:focus {
  color: $white;
  background-color: #FFFFFF19 !important;
  border-color: none !important;
  outline: none !important;
  box-shadow: none !important
}

.concert-builder-image, .orches-nation-image, .mars-rover-image {
  width: 100%;
  max-width: 100%;
  margin: 0 auto;

  @include lg {
    width: 75%;
    margin: 0 auto;
    margin-left: 6rem;
  }
}

.view-all-projects-container {
  position: relative;

  .can-image {
    position: absolute;
    bottom: 0;
    top: 0;
    left: -10%;
    max-width: 100%;

    @include lg {
      left: -25%;
      top: -75%;
    }
  }

}

.can-spacer {

  height: 250px; 

  @include lg {
    height: 10px;
  }
}

// Get in Touch
.get-in-touch-container {

  @include lg {
    margin: auto;
    margin-top: 4rem;
    width: 50%;
    
  }

    p {
      text-align: center;
      line-height: 2.3rem;
    }

    p:first-of-type {
      margin-bottom: 2rem;
    }

    .view-project {
      margin-top: 3rem;
      font-size: 1.7rem;
      letter-spacing: .4rem;
      cursor: pointer;
      margin-bottom: 6rem;

      span {
        display: inline-block;
      }

    

    
    }
}

// Project Detail Pages

.inner {

  flex-direction: column;

  @include lg {
    flex-direction: row;
  }
  .text-container {

    p {
      margin-bottom: 2rem;
    }

    @include lg {
      width: 50%;
    }
  }

  .button-container {

    width: 100%;
    align-items: center;
    
    @include lg {
      width: 50%;
      align-items: end;
    }
  }
}

.line-through-work.bottom-projects-line {
  right: 20%;
}

.line-through-work.get-in-touch-line {
  right: 2%;
  left: 0;
}

.get-in-touch-text {
  width: 100%;
}



// Footer

.footer-container {
  margin: 0;
  padding-top: 5rem;
  padding-bottom: 2rem;
  background-color: $black;
  overflow: hidden;

  @include lg {
    margin: auto;
    padding-left: 6rem;
    padding-right: 6rem;
    width: 100%;
  }

  .footer-content-container {

    width: 80%;
    flex-direction: column;

    @include lg {
      flex-direction: row;
    }
  }

  .follow-container {
    margin-bottom: 4rem;

    @include lg {
      width: 30%;
    }
  }

  .social-icons {
    margin: auto;
    margin-bottom: 6rem;
   
    
    @include lg {
      width: 30%;
    }
  }

}

.copyright-container {

  width: 80%;

  p {
    font-size: .6rem;
  }
}






.button-container {
  a {
    text-decoration: none;
    width: 100%;
    font-family: 'inter', sans-serif;

    button {
      font-family: 'inter', sans-serif;
      width: 100%;
      height: 3rem;
      outline: 0;
      border: none;
      margin: 1rem auto;
      font-weight: 800;
      margin-top: 0;
    }


  }
}
/* ... */

